repaired safari on mobile

--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -46,6 +46,17 @@
 .card-category h4 {
   font-weight:bold;
   margin-bottom: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+
+.upper-card {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
 }
 
 .card-prix {
@@ -93,10 +104,6 @@
 .style_image {
   width: 260px;
   height: 180px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  flex: 0 0 20%;
 }
 
 .wrapper-meals {
